<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mostrarnota">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="339dp">

        <EditText
            android:id="@+id/txtmostrar_titulo"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:editable="false"
            android:gravity="top"
            android:hint="@string/txt_titulo"
            android:inputType="text|textMultiLine" />

        <EditText
            android:id="@+id/txtmostrar_descripcion"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:editable="false"
            android:gravity="top"
            android:hint="@string/txt_descripcion"
            android:inputType="text|textMultiLine" />

        <EditText
            android:id="@+id/txtmostrar_contenido"
            android:layout_width="match_parent"
            android:layout_height="504dp"
            android:editable="false"
            android:gravity="top"
            android:hint="@string/txt_contenido"
            android:inputType="text|textMultiLine" />

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:text="@string/btn_guardar" />
    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>